--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
 	</body>
 	<script>
-		let kiekot = ["Putteri", "Midari", "Kaverin valinta", "Vapaa valinta!", "Draiveri"]
+		let kiekot = ["Putteri", "Midari", "Kaverin valinta", "Vapaa valinta!", "Fairway", "Distance", "Ylivakaa", "Alivakaa"]
 		let lahikiekot = ["Putteri", "Midari", "Kaverin valinta", "Vapaa valinta!"]
 		let heitot = ["Suoraan / Antsa", "Hysse", "Forehandi", "VAPAA VALINTA"]
-		let extrakiekot = ["Midari", "Kaverin valinta", "Vapaa valinta!", "Draiveri"]
+		let extrakiekot = ["Midari", "Kaverin valinta", "Vapaa valinta!", "Fairway", "Distance", "Ylivakaa", "Alivakaa"]
 		let extrat = ["Upsi", "Kranaatti", "Thumberi", "Rolleri"]
 		function func1() {
 			var e  = document.getElementById("extra")
